welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:19: error: '=' expected but identifier found.
  def couleurMotif(i:Int) Color= {
                          ^MethodsPictureLarge:28: error: illegal start of simple expression
  def faireMotif() {
^